--- a/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
@@ -34,9 +34,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -101,6 +106,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -117,6 +123,13 @@
       <Project>{8DA1B494-04D7-47E2-8347-4D236DFD7433}</Project>
       <Name>Polygon.Models</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Polygon.Utils\Polygon.Utils.csproj">
+      <Project>{DEF84A2A-C88D-47CF-BEA3-58C927FC124E}</Project>
+      <Name>Polygon.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
