--- a/Polygon.ColorPicker/Polygon.ColorPicker/App.config
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/App.config
@@ -5,5 +5,6 @@
     </startup>
   <appSettings>
     <add key="NostaleClientXPath" value=""/>
+    <add key="CurrentColor" value="FF6CBFFF"/> <!-- FF6CBFFF is the base color -->
   </appSettings>
 </configuration>
