--- a/Polygon.ColorPicker/Polygon.ColorPicker/App.config
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="NostaleClientXPath" value=""/>
+    <add key="LauncherPath" value=""/>
     <add key="CurrentColor" value="FF6CBFFF"/> <!-- FF6CBFFF is the base color -->
   </appSettings>
 </configuration>
