Add right click change color

--- a/Polygon.ColorPicker/Polygon.ColorPicker/App.config
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/App.config
@@ -5,6 +5,7 @@
     </startup>
   <appSettings>
     <add key="LauncherPath" value=""/>
-    <add key="CurrentColor" value="FF6CBFFF"/> <!-- FF6CBFFF is the base color -->
+    <add key="CurrentGmColor" value="FF6CBFFF"/> <!-- FF6CBFFF is the base color -->
+    <add key="CurrentRightClickColor" value="78C4F5FF"/> <!-- 78C4F5FF is the base color -->
   </appSettings>
 </configuration>
