--- a/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Extensions\PickerViewModelExtensions.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PickerViewModel.cs" />
