Start family level update

--- a/Polygon.ColorPicker/Polygon.ColorPicker/App.config
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/App.config
@@ -7,5 +7,25 @@
     <add key="LauncherPath" value=""/>
     <add key="CurrentGmColor" value="FF6CBFFF"/> <!-- FF6CBFFF is the base color -->
     <add key="CurrentRightClickColor" value="78C4F5FF"/> <!-- 78C4F5FF is the base color -->
+    <add key="FamilyLevelOne" value="FFFFFFFF"/> <!--FFFFFFFF is the base color -->
+    <add key="FamilyLevelTwo" value="7FFFFFFF"/> <!-- 7FFFFFFF is the base color -->
+    <add key="FamilyLevelThree" value="00E1E1FF"/> <!-- 00E1E1FF  is the base color -->
+    <add key="FamilyLevelFour" value="00FFCCFF"/> <!-- 00FFCCFF is the base color -->
+    <add key="FamilyLevelFive" value="00FF99FF"/> <!-- 00FF99FF is the base color --> 
+    <add key="FamilyLevelSix" value="00FF66FF"/> <!-- 00FF66FF is the base color -->
+    <add key="FamilyLevelSeven" value="00FF00FF"/> <!-- 00FF00FF is the base color -->
+    <add key="FamilyLevelEight" value="40E900FF"/> <!-- 40E900FF is the base color -->
+    <add key="FamilyLevelNine" value="00FF00D2"/> <!-- 00FF00D2 is the base color -->
+    <add key="FamilyLevelTen" value="7AC500FF"/>  <!-- 7AC500FF is the base color -->
+    <add key="FamilyLevelEleven" value="99B900FF"/> <!-- 99B900FF is the base color --> 
+    <add key="FamilyLevelTwelve" value="B6A800FF"/> <!-- B6A800FF is the base color -->
+    <add key="FamilyLevelThirteen" value="D09900FF"/> <!-- D09900FF is the base color -->
+    <add key="FamilyLevelFourteen" value="F19728FF"/> <!-- F19728FF is the base color -->
+    <add key="FamilyLevelFifteen" value="FF9D32FF"/> <!-- FF9D32FF is the base color -->
+    <add key="FamilyLevelSixteen" value="FF9A68FF"/> <!-- FF9A68FF is the base color -->
+    <add key="FamilyLevelSeventeen" value="FF9E81FF"/> <!-- FF9E81FF is the base color --> 
+    <add key="FamilyLevelEighteen" value="FF8897FF"/> <!-- FF8897FF is the base color --> 
+    <add key="FamilyLevelNineteen" value="FF7EB0FF"/> <!-- FF7EB0FF is the base color -->
+    <add key="FamilyLevelTwenty" value="FF74C8FF"/> <!-- FF74C8FF is the base color -->
   </appSettings>
 </configuration>
