--- a/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/Polygon.ColorPicker.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Extensions\PickerViewModelExtensions.cs" />
+    <Compile Include="Models\FamilyLevelModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -118,9 +119,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Polygon.Models\Polygon.Models.csproj">
       <Project>{8DA1B494-04D7-47E2-8347-4D236DFD7433}</Project>
